working npm start

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,8 @@
     "extends": "./node_modules/pcf-scripts/tsconfig_base.json",
     "compilerOptions": {
         "typeRoots": ["node_modules/@types"],
-    }
+        "lib" : ["dom"],
+        "noImplicitAny": false,
+        "sourceMap": true
+    },
 }
