--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "navy_psr"]
-	path = navy_psr
+[submodule "NavyRecordReview/navy_psr"]
+	path = NavyRecordReview/navy_psr
 	url = git@github.com:twgardner2/navy_psr.git
