--- a/package.json
+++ b/package.json
@@ -13,19 +13,41 @@
     "refreshTypes": "pcf-scripts refreshTypes"
   },
   "dependencies": {
+    "@karmaniverous/serify-deserify": "^1.4.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "d3": "^7.8.5",
+    "flatpickr": "^4.6.13"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/runtime-corejs3": "^7.24.0",
     "@microsoft/eslint-plugin-power-apps": "^0.2.6",
     "@types/node": "^18.8.2",
     "@types/powerapps-component-framework": "^1.3.4",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
+    "arraybuffer-to-buffer": "^0.0.7",
+    "assert": "^2.1.0",
+    "browserify-fs": "^1.0.0",
+    "buffer": "^6.0.3",
+    "constants-browserify": "^1.0.0",
     "eslint": "^8.24.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.1",
+    "expose-loader": "^5.0.0",
+    "fs": "^0.0.1-security",
+    "graceful-fs": "^4.2.11",
+    "html-loader": "^5.0.0",
+    "path-browserify": "^1.0.1",
     "pcf-scripts": "^1",
     "pcf-start": "^1",
-    "typescript": "^4.8.4"
+    "pdfreader": "^1.2.14",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "typescript": "^4.8.4",
+    "url": "^0.11.3",
+    "util": "^0.12.5"
   }
 }
